2010-03-02  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-compile-and-load-file): Accept C-u arguments for
	compilation policy the same way as slime-compile-defun.

	* swank.lisp (compile-file-for-emacs): Take an additional policy argument.
	* swank-backend.lisp (swank-compile-file): Ditto.

	* swank-sbcl.lisp (compiler-policy, (setf compiler-policy)):
	rename from get/set-compiler-policy.
	(with-compiler-policy): New macro.
	(swank-compile-file): Use with-compiler-policy.
	(swank-compile-string): Ditto.

	* doc/slime.texi (Compilation): Update.

2010-03-01  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (documentation-symbol): Show arglists for functions too.

2010-03-01  Tobias C. Rittweiler <tcr@freebits.de>

	Fix that annoying bug that caused being constantly asked to switch
	connection in case one had multiple connections running and quit
	from one.

	* slime.el (slime-modeline-string): Bail out early because
	`slime-current-package' involves `slime-connection' in case the
	slime-repl contrib is used, and querying the user in a
	periodically called function is rather annoying..

2010-02-26  Stas Boukarev  <stassats@gmail.com>

	* swank-loader.lisp (ecl-version-string): Check length of
	the result of ext:lisp-implementation-vcs-id before doing subseq.
	On CVS it returns "unknown".

2010-02-25  Stas Boukarev  <stassats@gmail.com>

	* swank-loader.lisp (ecl-version-string): In
	#+(or) (progn #+#.(cl:print cl:nil) 1) PRINT does run on SBCL, which
	breaks #+#.(cl:if (cl:find-symbol "SYMBOL" :ext) ...) here, guard it with
	(find-package :ext) until further investigations.

2010-02-25  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-loader.lisp (lisp-version-string): Add git-commit ids for
	ECL because individual commits do not guarantee fasl
	compatibility.

2010-02-23  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-backend.lisp (when-let): New macro. For backends and
	swank.lisp.

	* swank-ecl.lisp: Use it. Also use new location support of ECL git